updates links to libraries

--- a/boxWorld/index.html
+++ b/boxWorld/index.html
@@ -6,7 +6,8 @@ https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-compone
 <html>
   <head>
     <title>Box World</title>
-    <script src="aframe.min.js"></script>   
+    <!--<script src="aframe.min.js"></script>-->
+    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>  
     <script>
       let rnd = (l,u) => Math.floor(Math.random() * (u-l) + l);
       let rndColor = () => "rgb(" + rnd(0,256) + "," + rnd(0,256) + "," + rnd(0,256) + ")";
