--- a/dinosaurWorld/index.html
+++ b/dinosaurWorld/index.html
@@ -6,7 +6,8 @@ https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-compone
 <html>
   <head>
     <title>Dinosaur World</title>
-    <script src="static/js/aframe.min.js"></script>
+    <!--<script src="static/js/aframe.min.js"></script>-->
+    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="static/js/aframe-environment-component.min.js"></script>
     <script src="static/js/aframe-event-set-component.min.js"></script>
     
